--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<p id="txt">This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</p>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
